appId: com.demoapp
---
- launchApp
- assertVisible: 'Brand: , Audi, Model: , e-tron 50 Quattro, Version: , 71 kWh'
- assertVisible:
    id: 'search-bar'
- swipe:
    start: '46%,54%'
    end: '46%,31%'
    duration: 762
- assertVisible: "Brand: , Audi, Model: , e-tron Sportback 50 Quattro, Version: ,\
    \ 71 kWh"
- tapOn:
    id: 'search-bar'
- tapOn:
    id: 'com.google.android.inputmethod.latin:id/label'
    index: 6
- tapOn:
    id: 'com.google.android.inputmethod.latin:id/key_pos_switch_to_symbol'
- tapOn:
    id: 'com.google.android.inputmethod.latin:id/icon'
    index: 5
- tapOn: 'Brand: , Aiways, Model: , U5, Version: , 63 kWh'
- assertVisible: 'Find out more'
- tapOn: 'Find out more'
- assertVisible: 'Fastned FAQ'
